# Object-Tracking-for-Self-Driving-Cars

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp  profiler.cpp  tracker.cpp
docs/: Doxyfile
docs/html/: annotated.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_common_test-members.html  class_common_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_disabled_test.html  class_e_n_p_m808_x_1_1_object_tracker-members.html  class_e_n_p_m808_x_1_1_object_tracker.html  class_e_n_p_m808_x_1_1_timer-members.html  class_e_n_p_m808_x_1_1_timer.html  class_e_n_p_m808_x_1_1_timer__coll__graph.map  class_e_n_p_m808_x_1_1_timer__coll__graph.md5  class_expect_failure_test-members.html  class_expect_failure_test.html  class_failed_test.html  class_failing_param_test.html  class_fatal_failure_in_fixture_constructor_test-members.html  class_fatal_failure_in_fixture_constructor_test.html  class_fatal_failure_in_set_up_test-members.html  class_fatal_failure_in_set_up_test.html  class_field_helper-members.html  class_field_helper.html  (+1500 more)
include/: config.h  profiler.h  tracker.h
logs/: cppcheck.txt  cpplint.txt
scripts/: build.sh  clean.sh  download_pretrained_model.sh  install_opencv.sh  run_app.sh  run_tests.sh  setup_vscode.sh
test/: CMakeLists.txt  main.cpp  test.cpp  test_tracker.cpp
(+1999 files in other folders)
